fixed warnign header not displaying

--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
 
     <section id="warnings" class="instruction-set__warnings section__coloring">
         <a name="warning-page"></a>
+        <h1>WARNINGS</h1>
         <div class="instruction-set__warnings ">
             <ul class="instruction-set__warnings--list" style="list-style-type: circle;" >
                 <p>
