fixed bullet point list in warnings

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 </li>
                 <li>
                     <p> 
-                        Humidifier should be unplugged when not in use.<strong class="instruction-set__warnings--warning-text"> DO NOT</strong>
+                        Humidifier should be  <strong class="instruction-set__warnings--warning-text"> unplugged </strong> when not in use.
                     </p>
                     
                 </li>
@@ -224,7 +224,8 @@
                     
                 </li>
                 <li>
-                    <p> <strong class="instruction-set__warnings--warning-text"> DO NOT</strong> attempt to repair or adjust any electrical or mechanical functions on this unit. Doing so will void your warranty.
+                    <p> <strong class="instruction-set__warnings--warning-text"> DO NOT</strong> attempt to repair or adjust any electrical or mechanical functions on this unit. 
+                        Doing so will void your warranty.
                          The inside of the unit contains no user serviceable parts. All servicing should be performed by qualified personnel
                          <strong class="instruction-set__warnings--warning-text"> only</strong>.
                     </p>
